# postgres

./: .cirrus.tasks.yml  configure  configure.ac  extra-config.yml  meson.build  meson_options.txt
contrib/amcheck/: verify_gin.c  verify_heapam.c  verify_nbtree.c
contrib/auth_delay/: auth_delay.c
contrib/auto_explain/: auto_explain.c
contrib/basebackup_to_shell/: basebackup_to_shell.c
contrib/basic_archive/: basic_archive.c
contrib/bloom/: blinsert.c  blutils.c
contrib/btree_gist/: btree_cash.c  btree_enum.c  btree_float4.c  btree_float8.c  btree_inet.c  btree_interval.c  btree_macaddr.c  btree_macaddr8.c  btree_numeric.c  btree_oid.c  btree_ts.c
contrib/file_fdw/: file_fdw.c
contrib/hstore_plperl/: hstore_plperl.c
contrib/isn/: isn.c
contrib/jsonb_plperl/: jsonb_plperl.c
contrib/ltree/: lquery_op.c
contrib/passwordcheck/: passwordcheck.c
contrib/pg_plan_advice/: pg_plan_advice.c  pg_plan_advice.h
contrib/pg_prewarm/: autoprewarm.c  pg_prewarm.c
contrib/pg_stash_advice/: pg_stash_advice.c  pg_stash_advice.h  stashpersist.c
contrib/pg_stat_statements/: pg_stat_statements.c
contrib/pg_surgery/: heap_surgery.c
contrib/pg_trgm/: trgm.h  trgm_op.c
contrib/pg_visibility/: pg_visibility.c
contrib/pg_walinspect/: pg_walinspect.c
contrib/pgcrypto/: crypt-blowfish.c  crypt-des.c  crypt-sha.c  pgcrypto.c  px.h
contrib/pgstattuple/: pgstatapprox.c  pgstatindex.c  pgstattuple.c
contrib/postgres_fdw/: connection.c  deparse.c  option.c  postgres_fdw.c  postgres_fdw.h
contrib/sepgsql/: hooks.c
contrib/spi/: refint.c
contrib/tsm_system_rows/: tsm_system_rows.c
contrib/tsm_system_time/: tsm_system_time.c
doc/src/sgml/: bgworker.sgml  config.sgml  custom-rmgr.sgml  func.sgml  libpq.sgml  mvcc.sgml  oauth-validators.sgml  plperl.sgml  protocol.sgml  sources.sgml  system-views.sgml  xfunc.sgml
src/: Makefile.global.in  meson.build
src/backend/: Makefile  meson.build
src/backend/archive/: shell_archive.c
src/backend/backup/: basebackup.c  basebackup_copy.c  basebackup_gzip.c  basebackup_progress.c  basebackup_server.c  basebackup_target.c  basebackup_throttle.c  walsummaryfuncs.c
src/backend/bootstrap/: bootparse.y  (+2 more)
src/backend/storage/ipc/: Makefile  dsm.c  dsm_impl.c  dsm_impl_mmap.c  dsm_impl_posix.c  dsm_impl_sysv.c  dsm_impl_windows.c  dsm_registry.c  interrupt.c  ipc.c  ipci.c  latch.c  meson.build  pmsignal.c  procarray.c  procsignal.c  shm_mq.c  shmem.c  shmem_hash.c  signalfuncs.c  sinval.c  sinvaladt.c  standby.c  waiteventset.c
src/common/: base64.c  encnames.c  f2s.c  file_perm.c  jsonapi.c  keywords.c  logging.c  pg_lzcompress.c  pg_prng.c  saslprep.c  scram-common.c  username.c  wchar.c
src/include/: Makefile  c.h  fmgr.h  meson.build  miscadmin.h  pg_config.h.in  pg_config_manual.h  pg_getopt.h  pgstat.h  pgtime.h  port.h  postgres.h  postgres_ext.h
src/makefiles/: meson.build
src/port/: Makefile  chklocale.c  getopt.c  meson.build  pg_bitutils.c  pg_crc32c_sb8.c  pg_crc32c_sse42_choose.c  pg_getopt_ctx.c  pg_numa.c  pgsleep.c  pqsignal.c  strerror.c
src/test/modules/readbufferbench/: Makefile  bench.sql  meson.build  readbufferbench--1.0.sql  readbufferbench.c  readbufferbench.control
src/test/modules/test_aio/: Makefile  io_uring.conf  meson.build  sync.conf  test_aio--1.0.sql  test_aio.c  worker.conf
src/test/modules/test_aio/expected/: inject.out  io.out  ownership.out  prep.out
src/test/modules/test_aio/sql/: inject.sql  io.sql  ownership.sql  prep.sql
src/test/modules/test_dsm/: .gitignore  Makefile  meson.build  test_dsm--1.0.sql  test_dsm.c  test_dsm.control
src/test/modules/test_dsm/t/: 001_dsm_basic.pl
src/timezone/: pgtz.c
src/tools/: valgrind.supp
(+728 files in other folders)
